welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:15: error: not found: value decal
			setCouleurBrosse(tab(c%decal))
                                               ^