welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
		var depart:Color = getCouleurSol()
	var tab = new Array[Color](getWorldHeight())
	for(i <- 0 to getWorldHeight()-1){
		avance()
		tab(i) = getCouleurSol();
				}
		for(r <- 1 to getWorldHeight()){
			recule()
		}
		for(c <- 1 to getWorldHeight() - 1){
			gauche()
			avance()
			droite()
			setCouleurBrosse(tab(c%decal))
			baisseBrosse()
	leveBrosse()
		for(i <- 1 to getWorldHeight()-1){
	var decal = litMessage().toInt
	avance()
	setCouleurBrosse(tab(i%decal))
	baisseBrosse()
	leveBrosse()
	}
	for(p<-1 to getWorldHeight()){
		recule()
	}
		}
}
